# controller/book.go
@@ -16,12 +16,13 @@ import (
 // @Accept  json
 // @Param body body dto_book.Create true "the request body"
 // @Success 200 {object} dto_book.Full
+// @Failure 400 {object} dto_error.Error
 // @Router /book [post]
 func CreateBook(c *gin.Context) {
 	var body dto_book.Create
 	err := c.BindJSON(&body)
 	if err != nil {
-		utils.HandleError(c, err)
+		utils.HandleErrorBadRequest(c, err)
 		return
 	}
 	book := model_book.Create(body.Name, body.Page)
@@ -32,12 +33,13 @@ func CreateBook(c *gin.Context) {
 // @Summary List of Books
 // @Param query query dto_book.List true "query params"
 // @Success 200 {object} dto_book.Summary
+// @Failure 400 {object} dto_error.Error
 // @Router /book [get]
 func ListOfBooks(c *gin.Context) {
 	var query dto_book.List
 	err := c.BindQuery(&query)
 	if err != nil {
-		utils.HandleError(c, err)
+		utils.HandleErrorBadRequest(c, err)
 		return
 	}
 	var count int64 = 10
@@ -60,14 +62,20 @@ func ListOfBooks(c *gin.Context) {
 // @Accept  json
 // @Param id path string true "url params"
 // @Success 200 {object} dto_book.Full
+// @Failure 400 {object} dto_error.Error
+// @Failure 404 {object} dto_error.Error
 // @Router /book/{id} [get]
 func SingleBook(c *gin.Context) {
 	var params dto_book.Details
 	err := c.BindUri(&params)
 	if err != nil {
-		utils.HandleError(c, err)
+		utils.HandleErrorBadRequest(c, err)
 		return
 	}
-	book := model_book.Get(params.ID)
-	c.JSON(http.StatusOK, book)
+	book, err := model_book.Get(params.ID)
+	if err == nil {
+		c.JSON(http.StatusOK, book)
+		return
+	}
+	utils.HandleErrorNotFound(c, err)
 }
